[workspace]
resolver = "2"
default-members = [
    "kubert",
    "kubert-prometheus-process",
    "kubert-prometheus-tokio",
]
members = [
    "kubert",
    "kubert-prometheus-process",
    "kubert-prometheus-tokio",
    "examples",
]

[workspace.dependencies]

clap = { version = "4", default-features = false }

hyper = { version = "1", default-features = false }
hyper-openssl = { version = "0.10" }
hyper-util = { version = "0.1", default-features = false }

k8s-openapi = { version = "0.24", default-features = false }

kube-client = { version = "0.98", default-features = false }
kube-core = { version = "0.98", default-features = false }
kube-runtime = { version = "0.98", default-features = false }
kube = { version = "0.98", default-features = false }

prometheus-client = { version = "0.22.0", default-features = false }

tokio = { version = "1.17.0", default-features = false }
