[package]
name = "kubert-examples"
version = "0.1.0"
publish = false
edition = "2021"
license = "Apache-2.0"
rust-version = "1.60"

[package.metadata.release]
release = false

[features]
default = ["rustls-tls"]
rustls-tls = ["kubert/rustls-tls"]
openssl-tls = ["kubert/openssl-tls", "openssl"]

[dependencies.kubert]
path = "../kubert"
default-features = false
features = ["clap", "lease", "runtime"]

[dependencies.openssl]
version = "0.10.57"
optional = true
features = ["vendored"]

[dev-dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false }
maplit = "1"
rand = "0.8"
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }

[dev-dependencies.clap]
version = "4"
default-features = false
features = ["derive", "help", "env", "std"]

[dev-dependencies.k8s-openapi]
version = "0.20"
default-features = false
features = ["latest"]

[dev-dependencies.kube]
version = "0.87.1"
default-features = false
features = ["client", "derive", "rustls-tls", "runtime"]

[dev-dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread", "time"]

[[example]]
name = "watch-pods"
path = "watch_pods.rs"

[[example]]
name = "lease"
path = "lease.rs"
