[package]
name = "kubert-examples"
version = "0.1.0"
publish = false
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"

[package.metadata.release]
release = false

[dependencies.kubert]
path = "../kubert"
default-features = false
features = [
    "aws-lc-rs",
    "clap",
    "lease",
    "prometheus-client",
    "runtime",
    "runtime-brotli",
    "runtime-diagnostics",
]

[dev-dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false }
maplit = "1"
prometheus-client = "0.24"
rand = "0.10"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }

[dev-dependencies.clap]
workspace = true
features = ["derive", "help", "env", "std"]

[dev-dependencies.k8s-openapi]
workspace = true
features = ["latest"]

[dev-dependencies.kube]
workspace = true
features = ["client", "derive", "runtime"]

[dev-dependencies.tokio]
workspace = true
features = ["macros", "parking_lot", "rt", "rt-multi-thread", "time"]

[[example]]
name = "watch-pods"
path = "watch_pods.rs"

[[example]]
name = "lease"
path = "lease.rs"
