[package]
name = "kubert-prometheus-tokio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A prometheus-client tokio runtime metrics collector"
readme = "../README.md"
repository = "https://github.com/olix0r/kubert"
rust-version = "1.65"
keywords = ["prometheus-client", "rokio", "metrics", "monitoring"]

[dependencies]
prometheus-client = "0.22.0"
tokio = { version = "1", features = ["rt", "time"] }
tokio-metrics = { version = "0.3", features = ["rt"] }
tracing = "0.1"
