[package]
name = "kubert-prometheus-tokio"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A prometheus-client tokio runtime metrics collector"
readme = "../README.md"
repository = "https://github.com/olix0r/kubert"
rust-version = "1.74"
keywords = ["prometheus-client", "tokio", "metrics", "monitoring"]

[features]
rt = ["tokio/rt", "tokio/time", "tokio-metrics/rt"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
prometheus-client = { workspace = true }
tokio = { workspace = true }
tokio-metrics = "0.4"
tracing = "0.1"
